--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>our mission</title>
         <meta charset="utf-8">
-        <link type="text/css" rel="stylesheet" href="design.css">
+        <link type="text/css" rel="stylesheet" href="design.css" media="screen and(max-device-width:1280px">
+        <link type="text/css" rel="stylesheet" href="mobiledevice.css" media="screen and(max-device-width:640px)">
     </head>
     <body>
         <header>
