--- a/whyparkour.html
+++ b/whyparkour.html
@@ -5,8 +5,8 @@
         <title>
             Why to learn PARKOUR?
         </title>
-        <link type="text/css" rel="stylesheet" href="design.css" media="screen and(max-device-width:1280px">
-        <link type="text/css" rel="stylesheet" href="mobiledevice.css" media="sceen and(max-device-width:640px)">
+        <link type="text/css" rel="stylesheet" href="design.css" media="screen and(min-device-width:960px)">
+        <link type="text/css" rel="stylesheet" href="mobiledevice.css" media="sceen and(min-device-width:480px)">
     </head>
     <body>
         <header>
