--- a/whyparkour.html
+++ b/whyparkour.html
@@ -5,7 +5,7 @@
         <title>
             Why to learn PARKOUR?
         </title>
-        <link type="text/css" rel="stylesheet" href="design.css" media="screen and(min-device-width:960px)">
+        <link type="text/css" rel="stylesheet" href="design.css">
         <link type="text/css" rel="stylesheet" href="mobiledevice.css" media="screen and(min-device-width:480px)">
     </head>
     <body>
