--- a/whyparkour.html
+++ b/whyparkour.html
@@ -6,7 +6,7 @@
             Why to learn PARKOUR?
         </title>
         <link type="text/css" rel="stylesheet" href="design.css">
-        <link type="text/css" rel="stylesheet" href="mobiledevice.css" media="screen and(min-device-width:480px)">
+        <link type="text/css" rel="stylesheet" href="mobiledevice.css">
     </head>
     <body>
         <header>
