--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>our mission</title>
         <meta charset="utf-8">
-        <link type="text/css" rel="stylesheet" href="design.css">
+        <link type="text/css" rel="stylesheet" href="../CSS/design.css">
     </head>
     <body>
         <header>
