--- a/HTML/whyparkour.html
+++ b/HTML/whyparkour.html
@@ -5,7 +5,7 @@
         <title>
             Why to learn PARKOUR?
         </title>
-        <link type="text/css" rel="stylesheet" href="design.css">
+        <link type="text/css" rel="stylesheet" href="../CSS/design.css">
     </head>
     <body>
         <header>
