--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,13 +7,13 @@
     </head>
     <body>
         <header>
-        <h1><span id="purple">*</span>Knowledge equal power<span id="purple">*</span></h1> 
+        <h1><span class="purple">*</span>Knowledge equal power<span class="purple">*</span></h1> 
         </header>
      <nav>
-         <ul>
+         <ol>
              <li><a href=""> ARTICLE</a></li>
              <li><a class="selected" href="index.html">MISSION</a></li>
-         </ul>
+         </ol>
      </nav>
    <article>
      <p>To provide with all kind of usefull information in a relatable and in a digestible manner.
