--- a/HTML/overcomefears.html
+++ b/HTML/overcomefears.html
@@ -22,6 +22,8 @@
     <p class="presentation">All of us have fears, but how we choose to manage them represent a little big part of us.<br>
     Here I will present you some good ways to overcome fears, even if they are little or big.
     </p>
+    <p>The first step will be always is to identify the fear you want to overcome.<br>
+    </p>
 </article>
 </body>
 </html>
