--- a/HTML/overcomefears.html
+++ b/HTML/overcomefears.html
@@ -13,17 +13,28 @@
 <nav>
     <ol>
         <li><span class="selected"><a href="">ARTICLE</a></span></li>
-        <li><a href="index.html">MISSION</a></li>
+        <li><a target="_blank" href="index.html">MISSION</a></li>
     </ol>
 </nav>
 <article>
     <h2>How to overcome your fears</h2>
     <h4>=presented step by step=</h4>
     <p class="presentation">All of us have fears, but how we choose to manage them represent a little big part of us.<br>
-    Here I will present you some good ways to overcome fears, even if they are little or big.
+    Here I will present you some good ways to overcome fears, even if they are little or big.<br>
+    <br>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTR58w38lPVVev231EumrfXx8wdXO6qBrfcEA&usqp=CAU">
     </p>
     <p>The first step will be always is to identify the fear you want to overcome.<br>
     </p>
+  <h2><span class="categories">1.When you need to do an action right into the moment, but you fear to say or do it</span></h2>
+  <p>When you have situations when you need to say something or do something now and not later, this strategy<br>
+is a good to cope mechanism with these type of fears. All what you need to do is:<br>
+<br>
+ 1.To countdown 3 seconds or more, but no more than 5 seconds.<br>
+ 2.And then to say or make the action you fear, but you need also to do it.<br>
+ <br>
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRVzke0mWrPWMSnjjSjYaRnkqLO-_jlStT-LQ&usqp=CAU">
+</p>
 </article>
 </body>
 </html>
