--- a/HTML/overcomefears.html
+++ b/HTML/overcomefears.html
@@ -28,7 +28,7 @@
     </p>
   <h2><span class="categories">1.When you need to do an action right into the moment, but you fear to say or do it</span></h2>
   <p>When you have situations when you need to say something or do something now and not later, this strategy<br>
-is a good to cope mechanism with these type of fears. All what you need to do is:<br>
+is a good cope mechanism with these type of fears. All what you need to do is this:<br>
 <br>
  1.To countdown 3 seconds or more, but no more than 5 seconds.<br>
  2.And then to say or make the action you fear, but you need also to do it.<br>
