--- a/HTML/overcomefears.html
+++ b/HTML/overcomefears.html
@@ -25,6 +25,7 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTR58w38lPVVev231EumrfXx8wdXO6qBrfcEA&usqp=CAU">
     </p>
     <p>The first step will be always is to identify the fear you want to overcome.<br>
+    Then to identify the type of fear and choose the right cope mechanism for it.
     </p>
   <h2><span class="categories">1.When you need to do an action right into the moment, but you fear to say or do it</span></h2>
   <p>When you have situations when you need to say something or do something now and not later, this strategy<br>
