--- a/HTML/overcomefears.html
+++ b/HTML/overcomefears.html
@@ -33,7 +33,7 @@
 is a good cope mechanism with these type of fears. All what you need to do is this:<br>
 <br>
  1.To countdown 3 seconds or more, but no more than 5 seconds.<br>
- 2.And then to say or make the action you fear, but you need also to do it.<br>
+ 2.And then to say or make the action you fearv.<br>
  <br>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRVzke0mWrPWMSnjjSjYaRnkqLO-_jlStT-LQ&usqp=CAU">
 </p>
