--- a/HTML/overcomefears.html
+++ b/HTML/overcomefears.html
@@ -33,10 +33,14 @@
 is a good cope mechanism with these type of fears. All what you need to do is this:<br>
 <br>
  1.To countdown 3 seconds or more, but no more than 5 seconds.<br>
- 2.And then to say or make the action you fearv.<br>
+ 2.And then to say or make the action you fear.<br>
  <br>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRVzke0mWrPWMSnjjSjYaRnkqLO-_jlStT-LQ&usqp=CAU">
-</p>
+ 
+<h3 class="How">BEHIND THE SCENES</h3>
+    <p class="How">Bassicaly your brain when fears something, more often than not, will try to make you
+    to don't do an action by using negative toughts like "she we'll be mad because of you" or "if you do this he will be sad just because of you".<br>
+    </p> 
 </article>
 </body>
 </html>
