--- a/HTML/overcomefears.html
+++ b/HTML/overcomefears.html
@@ -37,10 +37,13 @@ is a good cope mechanism with these type of fears. All what you need to do is th
  <br>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRVzke0mWrPWMSnjjSjYaRnkqLO-_jlStT-LQ&usqp=CAU">
  
-<h3 class="How">BEHIND THE SCENES</h3>
-    <p class="How">Bassicaly your brain when fears something, more often than not, will try to make you
+<h3 class="how">BEHIND THE SCENES</h3>
+    <p class="how">
+    Bassicaly your brain when fears something, more often than not, will try to make you
     to don't do an action by using negative toughts like "she we'll be mad because of you" or "if you do this he will be sad just because of you".<br>
+    
     </p> 
+ 
 </article>
 </body>
 </html>
