--- a/HTML/overcomefears.html
+++ b/HTML/overcomefears.html
@@ -39,9 +39,12 @@ is a good cope mechanism with these type of fears. All what you need to do is th
  
 <h3 class="how">BEHIND THE SCENES</h3>
     <p class="how">
-    Bassicaly your brain when fears something, more often than not, will try to make you
-    to don't do an action by using negative toughts like "she we'll be mad because of you" or "if you do this he will be sad just because of you".<br>
-    
+      Bassicaly your brain when fears something, more often than not, will try to make you
+    to don't do an action by using negative toughts like "She we'll be mad because of you" or "If you do this he will be sad just because of you".<br>
+    Or it can use tougths to "say" to you that you can do it later even if you know that later isn't an option, such as "You can pay your bills later" or
+    "You don't need to say this now."<br>
+       So when you countdown you stop your thoughts who are stoping you to do the action and<br>
+    then you just do that, in this way you will not give time to your brain to complain about what are you doing.<br>
     </p> 
  
 </article>
