--- a/HTML/Parkour-vision.html
+++ b/HTML/Parkour-vision.html
@@ -3,5 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>What is PARKOUR VISION and how to get it</title>
+    <link type="text/css" rel="stylesheet" href="..CSS/design.css">
 </head>
+<header>
+    
+</header>
 </html>
