--- a/HTML/parkour-vision.html
+++ b/HTML/parkour-vision.html
@@ -6,6 +6,12 @@
     <link type="text/css" rel="stylesheet" href="..CSS/design.css">
 </head>
 <header>
-    
+    <h1><span class="purple">*</span>Knowledge equal power<span class="purple">*</span></h1>
 </header>
+<nav>
+    <ol>
+        <li><a class="selected" href=""> ARTICLE</a></li>
+        <li><a target="_blank" href="index.html">MISSION</a></li>
+    </ol>
+</nav>
 </html>
