--- a/HTML/parkour-vision.html
+++ b/HTML/parkour-vision.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>What is PARKOUR VISION and how to get it</title>
-    <link type="text/css" rel="stylesheet" href="..CSS/design.css">
+    <link type="text/css" rel="stylesheet" href="../CSS/design.css">
 </head>
 <header>
     <h1><span class="purple">*</span>Knowledge equal power<span class="purple">*</span></h1>
@@ -14,4 +14,7 @@
         <li><a target="_blank" href="index.html">MISSION</a></li>
     </ol>
 </nav>
+<article>
+    
+</article>
 </html>
