--- a/HTML/parkour-vision.html
+++ b/HTML/parkour-vision.html
@@ -17,5 +17,10 @@
 <article>
     <h2>Parkour Vision<br></h2>
     <h4>=what is & how to get it=</h4>
+    <p class="presentation">Let's say that you already started parkour, but you don't find<br>
+    spot for that. What if I will say that you already have places to practice and you just don't<br>
+    see them? Here I will give you a few things that you can use in parkour and you ca n find them<br>
+    almost anywhere + recomended places where you can practice safely by yourself.
+    </p>
 </article>
 </html>
