--- a/HTML/parkour-vision.html
+++ b/HTML/parkour-vision.html
@@ -19,8 +19,10 @@
     <h4>=what is & how to get it=</h4>
     <p class="presentation">Let's say that you already started parkour, but you don't find<br>
     spot for that. What if I will say that you already have places to practice and you just don't<br>
-    see them? Here I will give you a few things that you can use in parkour and you ca n find them<br>
+    see them? Here I will give you a few things that you can use in parkour and you can find them<br>
     almost anywhere + recomended places where you can practice safely by yourself.
     </p>
+    <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRasSTRcKU4K1EziQYXoQLVQlKzuSYdIzQPQg&usqp=CAU"></p>
+    
 </article>
 </html>
