--- a/HTML/fame.html
+++ b/HTML/fame.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="../CSS/school-design.css">
 </head>
 <header>
-    <h1><span class="purple">*</span>Knowledge equal power<span class="purple">*</span></h1> 
+    <h1><span class="purple">*</span>Knowledge equal power<span class="purple">*</span>:)))</h1> 
         </header>
      <nav>
          <ol>
