--- a/HTML/fame.html
+++ b/HTML/fame.html
@@ -10,9 +10,17 @@
         </header>
      <nav>
          <ol>
-             <li><a href=""> ARTICLE</a></li>
-             <li><a class="selected" href="index.html">MISSION</a></li>
+             <li><a class="selected" href=""> ARTICLE</a></li>
+             <li><a href="index.html">MISSION</a></li>
          </ol>
      </nav>
 </header>
+<article>
+    <h1>Fame - can be a tool in changing the world ?</h1>
+     <h3>presented by: Ema Dorian Popa, Sofia-Ana Butuc, Alex-Luca Bortan.</h3>
+     <br>
+     <p class="intro">
+       First watch the video below! Then read the rest of the article.
+     </p>
+</article>
 </html>
