--- a/HTML/fame.html
+++ b/HTML/fame.html
@@ -17,7 +17,7 @@
 </header>
 <article>
     <h1>Fame - can be a tool in changing the world ?</h1>
-     <h3>presented by: Ema Dorian Popa, Sofia-Ana Butuc, Alex-Luca Bortan.</h3>
+     <h3>presented by: Ema Cristea, Sofia-Ana Butuc, Alex-Luca Bortan.</h3>
      <br>
      <p class="intro">
        First watch the video below! Then read the rest of the article.
