--- a/HTML/parkour-vision.html
+++ b/HTML/parkour-vision.html
@@ -23,6 +23,11 @@
     almost anywhere + recomended places where you can practice safely by yourself.
     </p>
     <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRasSTRcKU4K1EziQYXoQLVQlKzuSYdIzQPQg&usqp=CAU"></p>
-    
+    <h2>What is it?</h2>
+    <p>Parkour Vision is the ability to imaginate and to see obstacles almost everywhere.
+    Let's take for example a curb. What can you do with a curb? At first maybe you'll say nothing,
+    but if you think more you can already see that you can do may many things on a curb.
+    </p>
+    <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRn5sjFOmtNBgJ_od8Wq4vtiT7kmeR9oAlpOA&usqp=CAU"></p>
 </article>
 </html>
