--- a/HTML/fame.html
+++ b/HTML/fame.html
@@ -21,8 +21,12 @@
      <p class="intro">
        First watch the video below! Then read the rest of the article.
      </p>
-
-     VIDEO
+     <video controls
+    src="intro-site-eng.mp4" type="mp4"
+    hight="300" width="512"
+    ></video>
+     <br>
+    <br>
   <article class="example1">
     <h2>Malala Yousafzai</h2>
     <p>She was from Pakistan. She loved school, but one day the talibans invaded the town where she used to live. The girl was only 10 years old when the talibans weren’t allowing girls to go to school and many other things, so she started to write online and participate to tv shows talking about how  the talibans discriminated the girls, but she put the most accent on  the fact that they weren’t allowing girls to educate themselves because they didn’t want them to have power. 
