--- a/HTML/fame.html
+++ b/HTML/fame.html
@@ -22,7 +22,7 @@
        First watch the video below! Then read the rest of the article.
      </p>
      <video controls
-    src="intro-site-eng.mp4" type="mp4"
+    src="video/intro-site-eng.mp4" type="mp4"
     hight="300" width="512"
     ></video>
      <br>
