--- a/HTML/fame.html
+++ b/HTML/fame.html
@@ -22,8 +22,8 @@
        First watch the video below! Then read the rest of the article.
      </p>
      <video controls
-    src="video/intro-site-eng.mp4" 
-    hight="300" width="512"
+    src="intro-site-eng.mp4" 
+    height="300" width="512"
     ></video>
      <br>
     <br>
