--- a/HTML/mastiNEWS.html
+++ b/HTML/mastiNEWS.html
@@ -22,6 +22,9 @@
         si mai mult mediul + cum sa nu-l distrugem.
         </p>
 
-        <p> Statisticile arata ca acum mastile care ne protejeaza pe noi de COVID-19, distrug mediul, mai exact marile si oceanele.</p>
+        <p> Statisticile arata ca acum mastile care ne protejeaza pe noi de COVID-19, distrug mediul, cele mai afectate fiind marile si oceanele.
+            Cum e acest lucru posibil? Pur si simplu uni oameni nu arunca mastile la cosurile cu capac, iar acestea zburand pe strada,
+            peste tot, ajung si in mari si oceane.
+        </p>
     </article>
 </html>
