--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-        <h1><span class="purple">*</span>Knowledge equal power<span class="purple">*</span></h1> 
+            <img src="Materiale/logo.png">
         </header>
      <nav>
          <ol>
