--- a/HTML/parkour-vision.html
+++ b/HTML/parkour-vision.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="../CSS/design.css">
 </head>
 <header>
-    <h1><span class="purple">*</span>Knowledge equal power<span class="purple">*</span></h1>
+    <img src="Materiale/logo.png">
 </header>
 <nav>
     <ol>
