--- a/HTML/whyparkour.html
+++ b/HTML/whyparkour.html
@@ -9,14 +9,16 @@
     </head>
     <body>
         <header>
-            <h1><span class="purple">*</span>Knowledge equal power<span class="purple">*</span></h1>
-        </header>
-        <nav>
-            <ol>
-                <li><a class="selected" href=""> ARTICLE</a></li>
-                <li><a target="_blank" href="index.html">MISSION</a></li>
-            </ol>
-        </nav>
+            <img src="Materiale/logo.png">
+        
+    </header>
+    <nav>
+            
+        <ol>
+            <li><a class="selected" href=""> ARTICLE</a></li>
+            <li><a target="_blank" href="index.html">MISSION</a></li>
+        </ol>
+    </nav>
         <article>
             <h2>Why to learn parkour?<br></h2>
         <h4>=the 10 benefits of parkour=</h4>
