--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,10 +11,10 @@
 </header>
 <nav>
     <ol>
-        <li><a class= "selected">HOME</a></li>
-        <li>ABOUT</li>
-        <li>MISSION</li>
-        <li>FOLLOW</li>
+        <li><a class= "selected" href="index.html">HOME</a></li>
+        <li><a href="">ABOUT</a></li>
+        <li><a href="mission.html">MISSION</a></li>
+        <li><a href="">FOLOW</a></li>
     </ol>
 </nav>
 <article>
