--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,7 @@
         <li><a class= "selected" href="index.html">HOME</a></li>
         <li><a href="">ABOUT</a></li>
         <li><a href="mission.html">MISSION</a></li>
-        <li><a href="">FOLOW</a></li>
+        <li><a href="folow.html">FOLOW</a></li>
     </ol>
 </nav>
 <article>
