--- a/HTML/mission.html
+++ b/HTML/mission.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="">ABOUT</a></li>
             <li><a class="selected"href="mission.html">MISSION</a></li>
-            <li><a href="">FOLOW</a></li>
+            <li><a href="folow.html">FOLOW</a></li>
         </ol>
     </nav>
     <article>
