--- a/HTML/folow.html
+++ b/HTML/folow.html
@@ -14,7 +14,7 @@
             <li><a  href="index.html">HOME</a></li>
             <li><a href="">ABOUT</a></li>
             <li><a href="mission.html">MISSION</a></li>
-            <li><a class="selected" href="folow.html">FOLOW</a></li>
+            <li><a class="selected" href="folow.html">FOLLOW</a></li>
         </ol>
     </nav>
     <article>
