--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,19 +6,19 @@
         <link type="text/css" rel="stylesheet" href="../CSS/design.css">
     </head>
   <body>
-<header>
-    <img src="Materiale/logo.png" alt="KEP parkour">
-</header>
+
 <nav>
     <ol>
+        <li><img src="Materiale/logo.png"></li>
         <li><a class= "selected" href="index.html">HOME</a></li>
         <li><a href="">ABOUT</a></li>
         <li><a href="mission.html">MISSION</a></li>
-        <li><a href="folow.html">FOLOW</a></li>
+        <li><a target="_blank"href="folow.html">FOLLOW</a></li>
     </ol>
 </nav>
 <article>
     <img src="Materiale/home_img.jpeg" alt="Return for more guidance in parkour and freerunning!">
+    
 </article>
   </body>
 </html>
