--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
         <li><a class= "selected" href="index.html">HOME</a></li>
         <li><a href="">ABOUT</a></li>
         <li><a href="mission.html">MISSION</a></li>
-        <li><a target="_blank"href="folow.html">FOLLOW</a></li>
+        <li><a target="_blank"href="follow.html">FOLLOW</a></li>
     </ol>
 </nav>
 <article>
