--- a/HTML/mission.html
+++ b/HTML/mission.html
@@ -12,8 +12,8 @@
         <ol>
             <li><a href="index.html">HOME</a></li>
             <li><a href="">ABOUT</a></li>
-            <li><a class="selected"href="mission.html">MISSION</a></li>
-            <li><a href="folow.html">FOLLOW</a></li>
+            <li><a class="selected" href="mission.html">MISSION</a></li>
+            <li><a target="_blank" href="follow.html">FOLLOW</a></li>
         </ol>
     </nav>
     <article>
