--- a/HTML/follow.html
+++ b/HTML/follow.html
@@ -6,14 +6,13 @@
         <link type="text/css" rel="stylesheet" href="../CSS/design.css">
     </head>
     <body>
-    <header>
-        <img src="Materiale/logo.png" alt="KEP parkour">
-    </header>
+
     <nav>
         <ol>
-            <li><a  href="index.html">HOME</a></li>
+            <li><img src="Materiale/logo.png" alt="KEP parkour"></li>
+            <li><a target="_blank" href="index.html">HOME</a></li>
             <li><a href="">ABOUT</a></li>
-            <li><a href="mission.html">MISSION</a></li>
+            <li><a target="_blank" href="mission.html">MISSION</a></li>
             <li><a target="_blank" class="selected" href="follow.html">FOLLOW</a></li>
         </ol>
     </nav>
