--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,9 +10,9 @@
 <nav>
     <ol>
         <li><img src="Materiale/logo.png"></li>
-        <li><a class= "selected" href="index.html">HOME</a></li>
+        <li><a target="_blank" class= "selected" href="index.html">HOME</a></li>
         <li><a href="">ABOUT</a></li>
-        <li><a href="mission.html">MISSION</a></li>
+        <li><a target="_blank" href="mission.html">MISSION</a></li>
         <li><a target="_blank"href="follow.html">FOLLOW</a></li>
     </ol>
 </nav>
