--- a/HTML/mission.html
+++ b/HTML/mission.html
@@ -5,14 +5,13 @@
         <title> KEP's mission</title>
         <link type="text/css" rel="stylesheet" href="../CSS/design.css">
     </head>
-    <header>
-        <img src="Materiale/logo.png" alt="KEP parkour">
-    </header>
+
     <nav>
         <ol>
-            <li><a href="index.html">HOME</a></li>
+            <li><img src="Materiale/logo.png" alt="KEP parkour"></li>
+            <li><a target="_blank" href="index.html">HOME</a></li>
             <li><a href="">ABOUT</a></li>
-            <li><a class="selected" href="mission.html">MISSION</a></li>
+            <li><a target="_blank" class="selected" href="mission.html">MISSION</a></li>
             <li><a target="_blank" href="follow.html">FOLLOW</a></li>
         </ol>
     </nav>
