--- a/HTML/follow.html
+++ b/HTML/follow.html
@@ -15,12 +15,11 @@
             <li><a target="_blank" href="mission.html">MISSION</a></li>
             <li><a target="_blank" class="selected" href="follow.html">FOLLOW</a></li>
         </ol>
+        <img id="follow" src="Materiale/follow_img.jpeg" alt="FOLLOW">
     </nav>
     <article>
         <p>
-       <img src="Materiale/folow.jpeg" alt="FOLOW">
-        </p>
-        <p>
+       Follow us in youtube us well if you want content like this put in video format.<br>
        Youtube: <a href="https://www.youtube.com/channel/UC4Gz05jhPurmmb9gu1jF1Ew">https://www.youtube.com/channel/UC4Gz05jhPurmmb9gu1jF1Ew</a>
         </p>
     </article>
