--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,10 +15,10 @@
         <li><a target="_blank" href="mission.html">MISSION</a></li>
         <li><a target="_blank"href="follow.html">FOLLOW</a></li>
     </ol>
+    <img class="intro" src="Materiale/home_img.jpeg" alt="Return for more guidance in parkour and freerunning!">
 </nav>
 <article>
-    <img src="Materiale/home_img.jpeg" alt="Return for more guidance in parkour and freerunning!">
-    
+   
 </article>
   </body>
 </html>
