--- a/HTML/mission.html
+++ b/HTML/mission.html
@@ -14,8 +14,9 @@
             <li><a target="_blank" class="selected" href="mission.html">MISSION</a></li>
             <li><a target="_blank" href="follow.html">FOLLOW</a></li>
         </ol>
+        <img src="Materiale/mission_img.jpeg" alt="Our mission">  
     </nav>
     <article>
-    <img src="Materiale/mission.jpeg" alt="Our mission is to provide you the information to progrees fast in your parkour journey!">
+    
     </article>
 </html>
